# conan11326_cmakedeps_multiconfig

./: .gitignore  LICENSE  build_via_cmake.sh  build_via_conan2.sh  clean.sh
Downstream/: CMakeLists.txt  main.cpp
Downstream/conan/: conanfile.py
Internal/: Add.cpp  Add.h  CMakeLists.txt
Internal/conan/: conanfile.py
